--- a/Tarea4_AFrizard_KFuentes.ipynb
+++ b/Tarea4_AFrizard_KFuentes.ipynb
@@ -9,16 +9,16 @@
     "    \n",
     "### <font color='navy'> Simulación de procesos financieros. \n",
     "\n",
-    "**Nombres:** #############.\n",
+    "**Nombres:** Alejandro Frizard Aguilar, Keysi Fuentes Piña.\n",
     "\n",
-    "**Fecha:** XX de octubre del 201X.\n",
+    "**Fecha:** 19 de febrero del 2024.\n",
     "\n",
-    "**Expediente** : XXX.\n",
+    "**Expediente** : 739647, .\n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
     "**Link Github**: Link con el enlace del repositorio del creador del proyecto\n",
     "\n",
-    "# Tarea X: Clase X"
+    "# Tarea 4: Clase 9 y 10"
    ]
   },
   {
